# github-app

./: .env  .gitignore  Cargo.toml  README.md
action/: Cargo.toml
action/src/: main.rs
api/: Cargo.toml
api/src/: config.rs  handlers.rs  main.rs  middleware.rs  scanner.rs
crates/attestation/: Cargo.toml
crates/attestation/src/: lib.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: database.rs  lib.rs  types.rs
crates/github/: Cargo.toml
crates/github/src/: client.rs  lib.rs  types.rs  webhook.rs
crates/runner/: Cargo.toml
crates/runner/src/: execution.rs  lib.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: lib.rs  types.rs
scripts/: deploy.sh  generate-keys.sh  setup-db.sql
