[workspace]
members = [
    "crates/core",
    "crates/runner", 
    "crates/scanner",
    "crates/attestation",
    "crates/github",
    "crates/auth",
    "api",
    "action",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Nabla CLI for binary analysis
nabla-cli = "0.1"

# HTTP/API dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.11", features = ["json"] }

# GitHub integration
octocrab = "0.32"
jsonwebtoken = "9.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Security/Crypto
ring = "0.17"
sha2 = "0.10"
hex = "0.4"

# Configuration
config = "0.14"