[package]
name = "nabla-action"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nabla-action"
path = "src/main.rs"

[dependencies]
nabla-core = { path = "../crates/core" }
nabla-runner = { path = "../crates/runner" }
nabla-scanner = { path = "../crates/scanner" }
nabla-attestation = { path = "../crates/attestation" }
nabla-cli = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde-sarif = "0.4"