[package]
name = "nabla-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
nabla-core = { path = "../crates/core" }
nabla-runner = { path = "../crates/runner" }
nabla-scanner = { path = "../crates/scanner" }
nabla-attestation = { path = "../crates/attestation" }
nabla-github = { path = "../crates/github" }
nabla-auth = { path = "../crates/auth" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
config = { workspace = true }
uuid = { workspace = true }
base64 = "0.21"
ignore = "0.4"
globset = "0.4"
tree-sitter = "0.20"
tree-sitter-c = "0.20"
tree-sitter-rust = "0.20"
git2 = "0.18"
tempfile = "3.0"