[package]
name = "nabla-attestation"
version = "0.1.0"
edition = "2021"

[dependencies]
nabla-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = "0.21"
ed25519-dalek = "2.0"