[package]
name = "nabla-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
nabla-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }