[package]
name = "nabla-github"
version = "0.1.0"
edition = "2021"

[dependencies]
nabla-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
octocrab = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }